# hrDemo

./: .gitignore  .vercelignore  README.md  VERCEL_DEPLOYMENT.md  autosphere_policy.docx  bookings.xlsx  main.py  pyproject.toml  requirements-full.txt  requirements-vercel.txt  requirements.txt  run.py  run_uvicorn.py  users.xlsx
api/: index.py  requirements.txt
app/: __init__.py  config.py  database.py
app/api/: auth.py  autosphere.py  hr.py
app/middleware/: auth.py
app/models/: __init__.py  booking.py  policy_document.py  user.py
app/repositories/: __init__.py  base.py  booking_repository.py  policy_document_repository.py  user_repository.py
app/schemas/: auth.py  booking.py  chat.py  cv_evaluation.py  policy.py  technical.py
app/services/: __init__.py  auth_service.py  autosphere_service.py  hr_service.py
app/utils/: file_processor.py  openai_client.py  openapi_spec.py  response.py  vectorstore.py
instance/: hr_demo.db
pages/: autosphere_ai.py  hr_ai.py
utils/: openai_client.py
vectorstore/: index.faiss  index.pkl
